feat: m2m rest client (#47)